# DiscordGuildKeeper

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  PROJECT_SPEC.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: entrypoint.sh
src/butler/: __init__.py  main.py
src/butler/api/: __init__.py  app.py  health.py  metrics.py
src/butler/bot/: __init__.py  client.py  permissions.py
src/butler/bot/cogs/: __init__.py  admin.py  ai.py  anime.py  ping.py  tickets.py
src/butler/core/: __init__.py  config.py  db.py  logging.py  redis_client.py  scheduler.py  state.py  version.py
src/butler/crawlers/: __init__.py  animead.py  base.py  kktix.py  tixcraft.py
src/butler/models/: __init__.py  base.py  crawler.py  discord_entities.py  events.py  subscriptions.py  usage.py
src/butler/repositories/: __init__.py  events.py  subscriptions.py  usage.py
src/butler/services/: __init__.py  anime.py  llm.py  notification.py  rate_limit.py  summary.py  tickets.py
tests/: conftest.py
tests/unit/: test_health.py  test_models.py  test_ping.py  test_smoke.py
