[project]
name = "butler"
version = "0.1.0"
description = "Discord Butler Bot — private friend-guild Discord assistant (anime / ticket / LLM / summary)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [{ name = "q86865511" }]

dependencies = [
  # Discord
  "discord.py>=2.4.0,<3.0.0",
  # Web (M1 health endpoints)
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  # DB (M1+)
  "sqlalchemy[asyncio]>=2.0.36,<3.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "alembic>=1.14.0,<2.0.0",
  # Redis (M1+)
  "redis>=5.2.0,<6.0.0",
  # Scheduler (M3+)
  "apscheduler>=3.10.4,<4.0.0",
  # HTTP / parsing (M3+)
  "httpx>=0.27.2,<1.0.0",
  "beautifulsoup4>=4.12.3,<5.0.0",
  # LLM (M4+)
  "google-genai>=0.3.0,<2.0.0",
  # Config + logging (M0)
  "pydantic>=2.9.0,<3.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "structlog>=24.4.0,<26.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "respx>=0.21.1,<1.0.0",
  "ruff>=0.7.0,<1.0.0",
  "mypy>=1.13.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/butler"]

# ---------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "W",    # pycodestyle warnings
  "F",    # pyflakes
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
  "C4",   # flake8-comprehensions
  "SIM",  # flake8-simplify
  "ASYNC",  # flake8-async
  "RUF",  # ruff-specific
]
ignore = [
  "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # allow assert False in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
# discord.py uses many decorators that have complex types
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# Cogs are thin Discord adapters; relax strictness
module = "butler.bot.cogs.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
# Third-party libraries without bundled stubs
module = [
  "apscheduler.*",
  "google.genai.*",
  "google.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-q", "--strict-markers"]
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:discord.*",
]
